# Couple

./: .gitignore  CMakeLists.txt  main.cpp  main.qml  qml.qrc  qrc_qml.cpp
